# DG-Solver-for-3D-Advection-Diffusion-Equation

./: CMakeLists.txt  README.md
config/control/: Control.yaml
config/mesh/: cuboid_2_2_BD.msh  cuboid_boundary_refined.msh  cuboid_dense.msh  cuboid_l1w1h1_sparse.msh  cuboid_l2w1h1_sparse.msh  cuboid_periodic.msh  cuboid_sparse.msh  rectangle_2D.msh  square_n5.msh  uniform_cuboid_sparse.msh  unit_cuboid.msh
config/mesh/generator/: cuboid_2_2.geo  cuboid_2_2.msh  cuboid_4_1.geo  cuboid_4_1.msh  cuboid_boundary_refined.geo  cuboid_boundary_refined.msh  cuboid_dense.geo  cuboid_l1w1h1_sparse.geo  cuboid_l1w1h1_sparse.msh  cuboid_l2w1h1_sparse.geo  cuboid_l2w1h1_sparse.msh  cuboid_medium.msh  cuboid_mesh_control.py  cuboid_periodic.geo  cuboid_periodic.txt  cuboid_sparse.geo  cuboid_sparse.msh  plot_element.ipynb
include/BoundaryCondition/: BCIC.hpp  BoundaryCondition.hpp
include/DGSolver/: DGSolver.hpp  DGSolver_Advection.hpp
include/FiniteElement/: BasisFunctions.hpp  Integral.hpp  Quadrature.hpp  quad_2D_16.txt  quad_3D_14.txt  quad_3D_46.txt  quad_3D_81.txt
include/GlobalConfig/: GlobalConfig.hpp
include/Polynomial/: polynomial.hpp
include/SpatialMesh/: Element.hpp  SpatialMesh.hpp
include/Utility/: math_utils.hpp
output/: PlotTemp.ipynb  err.txt  plot.ipynb
output/3D/log/: AdvDiff_step_resisual.txt  FluxMat.txt  FluxMat_Quad.txt  Gray_DRT_step_resisual.txt  IntFaceMat.txt  IntFaceMat_Quad.txt  IntMat.txt  IntMat_Quad.txt  Integral_metadata.txt  MassFaceMat.txt  MassFaceMat_Quad.txt  MassMat.txt  MassMat_Quad.txt  StiffMat.txt  StiffMat_Quad.txt  mesh_info.txt  step_resisual.txt
output/3D/result/: AdvDiff_solution.txt  Advection_solution.txt  Advection_solution_t0001_x05.txt  Advection_solution_t0002_x05.txt  Advection_solution_t001_x05.txt  Advection_solution_t005_x05.txt  Advection_solution_t01_x05.txt  (+6 more)
src/: CMakeLists.txt
src/DGSolver/: CMakeLists.txt  DGSolver_AdvDiff copy.cpp  DGSolver_AdvDiff_og.cpp  DGSolver_Advection.cpp
src/Polynomial/: CMakeLists.txt  polynomial.cpp
src/Utility/: math_utils.cpp
src/test/: BasisFunctionsTests.cpp  Test.cpp
